kubernetes/qsb/apps/home-automation/selenium/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: selenium
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: selenium
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: home-assistant
      toPorts:
        - ports:
            - port: "4444"
              protocol: TCP
